# i8080-emulator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
balloon-bombers/: Cargo.toml
balloon-bombers/src/: display.rs  io.rs  main.rs  memory.rs
disassembler/src/: instruction.rs  main.rs
i8080/: Cargo.toml
i8080-tests/: Cargo.toml
i8080-tests/src/: main.rs
i8080/src/: condition_codes.rs  cpu.rs  lib.rs  machine.rs  memory_bus.rs  registers.rs
space-invaders/: Cargo.toml  Web.toml
space-invaders/.cargo/: config
space-invaders/roms/: README.md
space-invaders/sounds/: README.md
space-invaders/src/: display.rs  game.rs  io.rs  main.rs  memory.rs  sound.rs
space-invaders/static/: index.html
src/: condition_codes.rs  cpu.rs  display.rs  instruction.rs  lib.rs  main.rs  registers.rs
