[package]
name = "space-invaders"
version = "0.1.0"
authors = ["toddradin <todd.radin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {version = "0.34.3", default-features = false, features = ["mixer"]}
bitflags = "1.2"
i8080 =  { path = "../i8080" }